plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.9'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.usto'
version = '0.0.1-SNAPSHOT'
description = 'core'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    gradlePluginPortal()
    maven { url = 'https://repo.spring.io/milestone' }
    maven { url = 'https://repo.spring.io/release' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // QueryDSL 설정 (Spring Boot 3.x 용)
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"

    // 이메일 전송을 위한 스타터.
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    //전화번호 인증을 위한
    implementation 'net.nurigo:sdk:4.3.0'
    //Swagger UI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
    // QR 코드 생성
    implementation 'com.google.zxing:core:3.5.1'
    implementation 'com.google.zxing:javase:3.5.1'
    //PDF 생성
    implementation 'org.apache.pdfbox:pdfbox:2.0.29'
    //타임리프
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    //AI
    implementation platform('org.springframework.ai:spring-ai-bom:1.0.0-M5')
    implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'


}

//스웨거 버전 강제로 맞추기(이게 2.8.5버전입니다) - SpringAi 다운로드하면서 스웨거 문서 버전 호환 문제 발생 가능
allprojects {
    configurations.all {
        resolutionStrategy {
            force 'io.swagger.core.v3:swagger-core:2.2.28'
            force 'io.swagger.core.v3:swagger-models:2.2.28'
            force 'io.swagger.core.v3:swagger-annotations:2.2.28'
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

springBoot {
    mainClass = 'com.usto.CoreApplication'
}

// QueryDSL QClass 생성 위치 설정
def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile
sourceSets { main.java.srcDirs += [ querydslDir ] }
tasks.withType(JavaCompile).configureEach { options.getGeneratedSourceOutputDirectory().set(querydslDir) }
clean { delete querydslDir }